# pyInterval

./: .gitignore  README.md  config.yml  pyproject.toml
pyinterval/: cli.py
